<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/sunday"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:text="@string/sunday" />

            <CheckBox
                android:id="@+id/monday"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:text="@string/monday" />

            <CheckBox
                android:id="@+id/tuesday"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:text="@string/tuesday" />

            <CheckBox
                android:id="@+id/wednesday"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:text="@string/wednesday" />

            <CheckBox
                android:id="@+id/thursday"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:text="@string/thursday" />

            <CheckBox
                android:id="@+id/friday"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:text="@string/friday" />

            <CheckBox
                android:id="@+id/saturday"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:text="@string/saturday" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>